--- a/forum/src/main/resources/application.yml
+++ b/forum/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     properties:
       hibernate:
-        show-sql: true
+        show_sql: true
         format_sql: true
   h2:
     console:
